--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "aos": "^2.3.4",
+    "create-react-app": "^5.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "scrollreveal": "^4.0.9",
